@@ -1,6 +1,0 @@
-package com.nhl.link.etl.keybuilder;
-
-public interface IKeyBuilderFactory {
-
-	KeyBuilder keyBuilder(Class<?> type);
-}
