@@ -8,12 +8,12 @@ import org.apache.cayenne.DataObject;
 import org.apache.cayenne.exp.ExpressionFactory;
 import org.apache.cayenne.query.SelectQuery;
 
-import com.nhl.link.etl.keybuilder.KeyBuilder;
+import com.nhl.link.etl.runtime.transform.key.KeyMapAdapter;
 
 public class PrimaryKeyMatcher<T extends DataObject> extends BaseMatcher<T> implements CayenneMatcher<T> {
 	private final String pkAttribute;
 
-	public PrimaryKeyMatcher(KeyBuilder keyBuilder, String primaryKeyAttribute) {
+	public PrimaryKeyMatcher(KeyMapAdapter keyBuilder, String primaryKeyAttribute) {
 		super(keyBuilder);
 		this.pkAttribute = primaryKeyAttribute;
 	}
